Fix to overflowing sections on login page?

--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -499,7 +499,6 @@ span.tags
   font-family: Oswald;
   font-size: 30px;
   padding-left: 20px;
-  height: 70px;
   padding-top: 15px;
 }
 
